--- a/levier.css
+++ b/levier.css
@@ -1,19 +1,17 @@
 <style>
-.responsive-google-slides {
-  position: relative;
-  height: 0;
-  overflow: hidden;
-  padding-top: 56.25%;
-}
-.responsive-google-slides iframe {
-  border: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  max-width: 600px;
-  max-height: 450px;
-  height: 100%;
-}
+  .responsive-google-slides {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 Ratio */
+    height: 0;
+    overflow: hidden;
+  }
+  .responsive-google-slides iframe {
+    border: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    height: 800 !important;
+  }
 </style>
 
